--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Zomato</title>
 </head>
 <body>
     <header>
@@ -18,9 +18,70 @@
                 <img src="assets/logo.png" alt="logo" class="navbar__logo">
             </div>
             <div class="navbar__nav__items">
-                <button class="nav__item">Order Food</button>
+                <button class=" nav__item button__primary">Order Food</button>
             </div>
         </nav>
     </header>
+    <main class="container">
+        <!-- Hero Section-->
+        <section class="hero__container">
+            <div class="hero__image__container">
+                <img src="assets/hero.jpg" alt="Hero Image" class="hero__image">
+            </div>
+            <div class="hero_description">
+                <h1 class="hero__text">
+                    Order food from favourite restaurents near you.
+                </h1>
+                <button class="button__primary">
+                    Order Now
+                </button>
+
+            </div>
+        </section>
+
+
+        <!-- Explore Menu -->
+        <section class="explore__menu__container">
+            <h1 class="explore__menu__text">Explore Our Menu</h1>
+            <div class="explore__menu__gradient__bg">
+
+            </div>
+            <div class="explore__menu__lists">
+
+                <!-- Burger --> 
+                <div class="food__card card" id="burger__card">
+                    <div class="food__card__image__container">
+                        <img src="assets/burger.jpg" alt="Burger" class="food__image">
+                    </div>
+                    <div class="food__card__description">
+                        <h3 class="food__title">Burger</h3>
+                        <p>Burger King, Mcdonalds, Burger Place <span style="color:red">+3</span></p>
+                    </div>
+                </div>
+
+                <!-- pizza -->
+                <div class="food__card" id="pizza__card">
+                    <div class="food__card__image__container">
+                        <img src="assets/pizza.jpg" alt="Pizza" class="food__image">
+                    </div>
+                    <div class="food__card__description">
+                        <h3 class="food__title">Pizza</h3>
+                        <p>Burger King, Mcdonalds, Burger Place <span style="color:red">+3</span></p>
+                    </div>
+                </div>
+
+                <!-- ice-cream -->
+                <div class="food__card" id="iceCream__card">
+                    <div class="food__card__image__container">
+                        <img src="assets/iceCream.jpg" alt="Ice-Cream" class="food__image">
+                    </div>
+                    <div class="food__card__description">
+                        <h3 class="food__title">Ice-Cream</h3>
+                        <p>Burger King, Mcdonalds, Burger Place <span style="color:red">+3</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
